<resources>
    <string name="app_name">Axiom</string>
    <string name="testing">Тестирование</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_test_title">Начать</string>
    <string name="colored">Видимость правильного ответа</string>
    <string name="settings">Настройки</string>
    <string name="result_test_title">Тестирование завершено.</string>
    <string name="stop_testing">Завершить</string>
    <string name="question_db">Редактор</string>
    <string name="add_question_title">Введите вопрос</string>
    <string name="question_hint_example">Вопрос</string>
    <string name="next_title">Дальше</string>
    <string name="add_answer_title">Добавьте варианты ответов</string>
    <string name="answer_variable_title">Вариант ответа</string>
    <string name="add_title">Добавить</string>
    <string name="answer_hint">Вариант ответа</string>
    <string name="confirm_add_q_a_title">Вы действительно хотите добавить?</string>
    <string name="confirm">Подтвердить</string>
    <string name="no_questions">В базе нет вопросов</string>
    <string name="user">Пользователь</string>
    <string name="login_hint_example">Логин</string>
    <string name="password_hint_example">Пароль</string>
    <string name="password_confirm_hint_example">Пароль ещё раз</string>
    <string name="done">Готово</string>
    <string name="register_title">Регистрация</string>
    <string name="new_answer">Новый</string>
    <string name="text">Текст</string>
    <string name="question_hint">Вопрос</string>
    <string name="search_title">Поиск</string>
    <string name="restart">Ещё раз</string>
    <string name="settings_on">Вкл.</string>
    <string name="settings_off">Выкл.</string>
    <string name="cycle_mode">Циклический режим</string>
    <string name="question_size">Количество вопросов: </string>
    <string name="viewed_questions">Просмотрено:</string>
    <string name="new_cycle">Новый цикл</string>
    <string name="cycle">Цикл:</string>
    <string name="lesson">Дисциплина</string>
    <string name="autoflipping">Автоперелистывание</string>
    <string name="vy_nabrali">Вы набрали</string>
    <string name="sovershili">совершили</string>
    <string name="ne_otevili">и не ответили на</string>
    <string name="nightmode">Тема</string>
    <string name="day">День</string>
    <string name="night">Ночь</string>
    <string name="question_count">Количество вопросов</string>
    <string name="update">Обновление</string>
    <string name="update_available">Доступна новая база</string>
    <string name="to_update">Обновить</string>
    <string name="updating">Идёт обновление…</string>
    <string name="updating_complete">Обновление завершено</string>

    <string name="tag_settings">Настройки</string>
    <string name="tag_qmanager">Редактор</string>
    <string name="tag_search">Поиск</string>
    <string name="tag_testing">Тестирование</string>
    <string name="tag_auth">Авторизация</string>
    <string name="phone_hint">(123) 123 45 67</string>
    <string name="phone_code_hint">Код подтверждения</string>
    <string name="send_code">Отправить код</string>
    <string name="success_auth">Авторизация прошла успешно!</string>
    <string name="get_code">Получить код</string>
    <string name="username">Как Вас зовут?</string>
    <string name="welcome">Здравствуйте</string>
    <string name="tag_user">Пользователь</string>
    <string name="logout_title">Выйти</string>
    <string name="error">Что-то пошло не так :(</string>
    <string name="is_online">В сети:</string>
    <string name="ads_place">(Место для рекламы)</string>
    <string name="ad_id_banner">ca-app-pub-9899002563946376/1044925576</string>
    <string name="has_last_version">У Вас последняя версия</string>
    <string name="reset_update">Сбросить и обновить</string>
    <string name="check_update">Проверить наличие обновлений</string>
    <string name="from">Из</string>
    <string name="result">Результат:</string>
    <string name="one_correct_answer">Должен быть минимум 1 правильный ответ.</string>
    <string name="one_not_correct_answer">Должен быть минимум 1 неправильный ответ.</string>
    <string name="send_to">Поделиться</string>
    <string name="share">Поделиться</string>
    <string name="spent_time">Времени ушло:</string>
    <string name="statistics">Статистика</string>
    <string name="tag_stats">Статистика</string>
    <string name="tag_result">Результат</string>
    <string name="stats_empty">Здесь будет отображена Ваша статистика</string>
    <string name="lang_ru">Русский</string>
    <string name="lang_kz">Казахский</string>
    <string name="language">Язык</string>
    <string name="no_internet">Проверьте подключение к интернету :(</string>
</resources>
