<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/etxt_name"
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textCapWords"
        android:paddingBottom="@dimen/small_padding"
        android:paddingLeft="@dimen/large_padding"
        android:paddingRight="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding" />

    <com.proof.ly.space.proof.CustomViews.PrefixEditText
        android:id="@+id/etxt_login"
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:maxLength="10"
        android:paddingBottom="@dimen/small_padding"
        android:paddingLeft="@dimen/large_padding"
        android:paddingRight="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"
        android:tag="+7 " />

    <EditText
        android:id="@+id/etxt_code"
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_code_hint"
        android:inputType="phone"
        android:paddingBottom="@dimen/small_padding"
        android:paddingLeft="@dimen/large_padding"
        android:paddingRight="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_timer"
            android:text="60"
            android:theme="@style/TitleText"
            android:visibility="invisible"
            android:paddingRight="@dimen/normal_padding"
            android:paddingLeft="@dimen/normal_padding"
            android:paddingBottom="@dimen/small_padding"
            android:paddingTop="@dimen/small_padding"
            />
        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="@dimen/small_padding"
            android:layout_marginLeft="@dimen/normal_padding"
            android:layout_marginRight="@dimen/normal_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:text="@string/get_code"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@style/ButtonMenu" />
    </LinearLayout>

</LinearLayout>