<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_add_answer_title"
        android:maxLines="1"
        android:theme="@style/TitleText"
        android:text="@string/add_answer_title"
        android:paddingLeft="@dimen/large_padding"
        android:paddingRight="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:id="@+id/etxt_answer"
        style="@style/EditTextTheme"
        android:inputType="textCapCharacters|textMultiLine"
        android:hint="@string/answer_hint"
        android:paddingLeft="@dimen/large_padding"
        android:paddingRight="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_title"
            android:id="@+id/btn_add"
            android:theme="@style/ButtonMenu"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/normal_padding"
            android:layout_marginLeft="@dimen/normal_padding"
            android:layout_marginBottom="@dimen/small_padding"
            android:layout_marginTop="@dimen/small_padding"
            />
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:splitMotionEvents="false"
            android:id="@+id/rview"/>
    </LinearLayout>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_chevron_right_white_24dp"
        fab:fab_colorNormal="?attr/fab_color"
        fab:fab_colorPressed="?attr/fab_color"
        fab:fab_colorRipple="?attr/fab_color"
        />

</android.support.design.widget.CoordinatorLayout>